# AltProductionHosting

./: .env  .gitignore  BusinessPlan.md  FileDirectoryMap.md  HostingNetworkSetup.md  README.md
ControlPanel/: README.md  package.json  packages.txt  server.js
ControlPanel/agent/: agent.js  allowlist.js
ControlPanel/orchestrator/: jobQueue.js  reconciler.js  stateStore.js
ControlPanel/public/: app.js  index.html  styles.css
ControlPanel/state/: state.json
ControlPanel/templates/: bind.zone  nginx.vhost.conf
Sentinel Program/: Installation-Manual.md
Sentinel Program/Sentinel/: Install.md  README.md  build.gradle.kts  settings.gradle.kts
Sentinel Program/Sentinel Central AI/: Installation and Bashboard Setup.md  README.md
Sentinel Program/sentinel-lite/: Overview.md  integrity.py  manifest.json  netwatch.py  policy.yaml  procguard.py  reporter.py  sentinel-lite.service  sentinel.conf  sentinelctl.py
Sentinel Program/sentinel-lite/agent/: Cargo.toml  crypto.rs  main.rs  router.rs
Zion Phone OS/: Boot Install & Setup.md  about.md  main.py
Zion Phone OS/app-runtime/: README.md
Zion Phone OS/app_runtime/: __init__.py  permissions.py  (+5 more)
backend/: .env.example  package.json
docs/: architecture.md  backend-module-guide.md  operational-playbook.md  ubuntu25-deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
scripts/: README.md  check-services.sh  install-ubuntu25.sh  osnit_watch.py  sync-repo.sh
shared/: README.md
static-portal/: index.html
var-public/: README.md  index.html
var-root/: README.md
(+379 files in other folders)
