[package]
name = "sentinel-lite-agent"
version = "0.1.0"
edition = "2021"
authors = ["Alt Production Security <security-operations@altproduction.example>"]
description = "Sentinel Lite resilient security agent"
license = "Proprietary"

[dependencies]
anyhow = "1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
log = "0.4"
notify = { version = "6", default-features = false, features = ["macos_kqueue", "serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
signal-hook = { version = "0.3", features = ["iterator"] }
libc = "0.2"
env_logger = "0.11"

[dependencies.sd-notify]
version = "0.4"
default-features = false
features = ["systemd"]

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "git2"] }

[[bin]]
name = "sentinel-lite-agent"
path = "main.rs"

[package.metadata.release]
allow-branch = ["main", "release"]
